{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 496,
  "lineage": "92765c5d-b66c-7c4f-d73e-4052cde838d2",
  "resources": [
    {
      "module": "module.microservices[\"api-server\"].module.ec2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-server-instance",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7cf821b91bcccbc",
            "arn": "arn:aws:ec2:ap-south-1:574593008261:instance/i-024eb315754928983",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024eb315754928983",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xalts",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b959990ec5ae7755",
            "private_dns": "ip-10-0-13-130.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1cd03a9ddd23e4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08df647214e1dcf4d",
            "tags": {
              "Name": "api-server-instance"
            },
            "tags_all": {
              "Name": "api-server-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090309b418801c2d7"
            ]
          },
          "dependencies": [
            "module.microservices.module.ec2.aws_key_pair.my_key_pair",
            "module.microservices.module.ec2.tls_private_key.my_key",
            "module.microservices.module.vpc.aws_vpc.main",
            "module.microservices.module.vpc.module.eip.aws_eip.eip",
            "module.microservices.module.vpc.module.igw.aws_internet_gateway.gw",
            "module.microservices.module.vpc.module.routetable.aws_route_table.route",
            "module.microservices.module.vpc.module.routetable.aws_route_table_association.association",
            "module.microservices.module.vpc.module.securitygroup.aws_security_group.sg",
            "module.microservices.module.vpc.module.subnet.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.microservices[\"api-server\"].module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574593008261:vpc/vpc-0b576d88550cc68ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08990c674cc3cf356",
            "default_route_table_id": "rtb-0d74e92991d6e37cf",
            "default_security_group_id": "sg-034dfffe9f229a21e",
            "dhcp_options_id": "dopt-06cfbd56747dbce69",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b576d88550cc68ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d74e92991d6e37cf",
            "owner_id": "574593008261"
          }
        }
      ]
    },
    {
      "module": "module.microservices[\"api-server\"].module.vpc[0].module.eip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-server-EIP",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09551220d57375942",
            "domain": "vpc",
            "id": "eipalloc-09551220d57375942",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-168-231.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.168.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "api-server-EIP"
            },
            "tags_all": {
              "Name": "api-server-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.microservices[\"api-server\"].module.vpc[0].module.igw[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-server-IGW",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574593008261:internet-gateway/igw-0952456de722de96e",
            "id": "igw-0952456de722de96e",
            "owner_id": "574593008261",
            "tags": {
              "Name": "api-server-igw"
            },
            "tags_all": {
              "Name": "api-server-igw"
            },
            "vpc_id": "vpc-0b576d88550cc68ec"
          },
          "dependencies": [
            "module.microservices.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.microservices[\"api-server\"].module.vpc[0].module.routetable[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-server-Public-RT",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574593008261:route-table/rtb-06bf76f2ed1d49476",
            "id": "rtb-06bf76f2ed1d49476",
            "owner_id": "574593008261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0952456de722de96e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-server-Public-RT"
            },
            "tags_all": {
              "Name": "api-server-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576d88550cc68ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.microservices.module.vpc.aws_vpc.main",
            "module.microservices.module.vpc.module.igw.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.microservices[\"api-server\"].module.vpc[0].module.routetable[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-server-Public-Sub",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee00b26f0c6481f9",
            "route_table_id": "rtb-06bf76f2ed1d49476",
            "subnet_id": "subnet-08df647214e1dcf4d"
          },
          "dependencies": [
            "module.microservices.module.vpc.aws_vpc.main",
            "module.microservices.module.vpc.module.igw.aws_internet_gateway.gw",
            "module.microservices.module.vpc.module.routetable.aws_route_table.route",
            "module.microservices.module.vpc.module.subnet.aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.microservices[\"api-server\"].module.vpc[0].module.securitygroup[\"api-server-SG\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574593008261:security-group/sg-090309b418801c2d7",
            "description": "Security Group for api-server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090309b418801c2d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api-server-SG",
            "name_prefix": "",
            "owner_id": "574593008261",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-server-SG"
            },
            "tags_all": {
              "Name": "api-server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576d88550cc68ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.microservices.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.microservices[\"api-server\"].module.vpc[0].module.subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api-server-Public-Sub",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574593008261:subnet/subnet-08df647214e1dcf4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08df647214e1dcf4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "574593008261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-server-Public-Sub"
            },
            "tags_all": {
              "Name": "api-server-Public-Sub"
            },
            "vpc_id": "vpc-0b576d88550cc68ec"
          },
          "dependencies": [
            "module.microservices.module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}